k8s/gateway.yaml
# Spring Cloud Gateway 服务
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: axbx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: gateway
          image: hirosyu/axbx-gateway
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 18000
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 18000
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 18000
            initialDelaySeconds: 60
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: axbx
spec:
  ports:
    - port: 18000
      name: gateway
  selector:
    app: gateway

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: axbx
spec:
  rules:
    - host: axbx-gw.sk32.net
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway
              servicePort: 18000
